# Out-of-distribution-Mukhopadhyay-gatech

./: LICENSE  methods.md
OpenOOD/configs/pipelines/test/: test_rff_cifar10.yml
OpenOOD/configs/postprocessors/: rff.yml  rff_multilayer.yml
OpenOOD/openood/evaluation_api/: postprocessor.py
OpenOOD/openood/postprocessors/: __init__.py  rff_multilayer_postprocessor.py  rff_postprocessor.py  utils.py
OpenOOD/scripts/ood/rff/: cifar10_test_rff.sh
code/: .gitignore  openood_evaluation (1).ipynb  pyproject.toml  setup.py
code/.github/ISSUE_TEMPLATE/: adding-leaderboard-entry.md
code/OpenOOD/: .gitignore  eval_kernel_attention.sh  gpu_smoke.sbatch  path_check.sh  pyproject.toml  run_layer_probe.sh  sync_to_cluster.sh
code/OpenOOD/configs/datasets/cifar100/: cifar100.yml  cifar100_ood.yml
code/OpenOOD/configs/datasets/imagenet/: imagenet.yml  imagenet_fsood.yml  imagenet_ood.yml
code/OpenOOD/configs/datasets/imagenet200/: imagenet200.yml  imagenet200_ood.yml
code/OpenOOD/configs/postprocessors/: kernel_attention.yml  rff.yml  rff_nystrom.yml
code/OpenOOD/openood/evaluation_api/: postprocessor.py
code/OpenOOD/openood/postprocessors/: __init__.py  kernel_attention_postprocessor.py  rff_postprocessor.py  rffnystrom_postprocessor.py  utils.py
code/OpenOOD/scripts/: eval_ood_kernel_attention.py  layer_probe_diagnostic.py
code/OpenOOD/scripts/ood/gram/: cifar100_test_ood_gram.sh  cifar10_test_ood_gram.sh  cifar_10_slurrm.sh  imagenet_test_ood_gram.sh  rff.slurm
code/configs/datasets/cifar10/: cifar10.yml  cifar10_ood.yml
code/configs/postprocessors/: rffkernel.yml
code/openood/postprocessors/: rffkernel_postprocessor.py  utils.py
code/scripts/ood/rffkernel/: cifar100_test_ood_rffkernel.sh  cifar10_test_ood_rffkernel.sh
notebook/: openood_evaluation.ipynb
